修改spi代码